# MyFFMpegAndroid

./: .gitignore  .gitmodules  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/github/tedaliez/testffmpeg/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: NaiveQueue.cpp  NaiveQueue.h  jni_syncplayer.cpp  log.h  main.cpp  player.cpp  queueTest.cpp  utils.cpp  utils.h  video_config.cpp  video_config.h  video_config_jni.cpp
app/src/main/java/com/github/tedaliez/testffmpeg/: BasePlaygroundAct.kt  FileUtils.java  MainActivity.kt  NativeTest.kt  PathUtil.java  Player.kt  PlayerActivity.kt  SyncPlayer.kt  VideoFileConfig.kt
app/src/main/res/layout/: activity_main.xml  activity_player.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/github/tedaliez/testffmpeg/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
